Add userID to requests
