# gen/http/openapi.yaml
@@ -1,7 +1,7 @@
 swagger: "2.0"
 info:
     title: Wallet API
-    description: Service for managing user balances, allowing users to retrieve, update, and manage their balance information.
+    description: Service for processing user balance transactions
     version: 0.0.1
 host: localhost:8080
 consumes:
@@ -13,96 +13,186 @@ produces:
     - application/xml
     - application/gob
 paths:
-    /transaction:
+    /health:
+        get:
+            tags:
+                - wallet
+            summary: healthcheck wallet
+            description: Health check
+            operationId: wallet#healthcheck
+            responses:
+                "200":
+                    description: OK response.
+                    schema:
+                        $ref: '#/definitions/WalletHealthcheckResponseBody'
+                        required:
+                            - status
+            schemes:
+                - http
+    /user/{userId}/balance:
+        get:
+            tags:
+                - wallet
+            summary: getBalance wallet
+            description: Get user balance
+            operationId: wallet#getBalance
+            parameters:
+                - name: userId
+                  in: path
+                  description: User ID
+                  required: true
+                  type: integer
+                  minimum: 1
+            responses:
+                "200":
+                    description: OK response.
+                    schema:
+                        $ref: '#/definitions/WalletGetBalanceOKResponseBody'
+                        required:
+                            - userId
+                            - balance
+                "404":
+                    description: Not Found response.
+                    schema:
+                        $ref: '#/definitions/WalletGetBalanceNotFoundResponseBody'
+                        required:
+                            - userId
+                            - balance
+                "500":
+                    description: Internal Server Error response.
+                    schema:
+                        $ref: '#/definitions/WalletGetBalanceInternalServerErrorResponseBody'
+                        required:
+                            - userId
+                            - balance
+            schemes:
+                - http
+    /user/{userId}/transaction:
         post:
             tags:
-                - transaction
-            summary: create transaction
-            description: Create a new transaction
-            operationId: transaction#create
+                - wallet
+            summary: createTransaction wallet
+            description: Process transaction for user
+            operationId: wallet#createTransaction
             parameters:
+                - name: userId
+                  in: path
+                  description: User ID
+                  required: true
+                  type: integer
+                  minimum: 1
                 - name: Source-Type
                   in: header
-                  description: Source type header
                   required: true
                   type: string
                   enum:
                     - game
                     - server
                     - payment
-                - name: CreateRequestBody
+                - name: CreateTransactionRequestBody
                   in: body
                   required: true
                   schema:
-                    $ref: '#/definitions/TransactionCreateRequestBody'
+                    $ref: '#/definitions/WalletCreateTransactionRequestBody'
                     required:
                         - state
                         - amount
                         - transactionId
             responses:
-                "202":
-                    description: Accepted response.
-                "400":
-                    description: Invalid input
-                "500":
-                    description: Internal server error
-            schemes:
-                - http
-    /transaction/health:
-        get:
-            tags:
-                - transaction
-            summary: healthcheck transaction
-            description: Check if the service is running
-            operationId: transaction#healthcheck
-            produces:
-                - application/json
-            responses:
                 "200":
-                    description: Service is healthy
-                    schema:
-                        $ref: '#/definitions/TransactionHealthcheckResponseBody'
-                        required:
-                            - status
+                    description: OK response.
+                "400":
+                    description: Bad Request response.
+                "409":
+                    description: Conflict response.
+                "500":
+                    description: Internal Server Error response.
             schemes:
                 - http
 definitions:
-    TransactionCreateRequestBody:
-        title: TransactionCreateRequestBody
+    WalletCreateTransactionRequestBody:
+        title: WalletCreateTransactionRequestBody
         type: object
         properties:
             amount:
                 type: string
-                description: Amount of the transaction
                 example: "10.15"
             state:
                 type: string
-                description: State of the transaction
                 example: win
                 enum:
                     - win
-                    - lost
+                    - lose
             transactionId:
                 type: string
-                description: Transaction ID
-                example: some generated identificator
+                example: tx-123
         example:
             amount: "10.15"
             state: win
-            transactionId: some generated identificator
+            transactionId: tx-123
         required:
             - state
             - amount
             - transactionId
-    TransactionHealthcheckResponseBody:
-        title: TransactionHealthcheckResponseBody
+    WalletGetBalanceInternalServerErrorResponseBody:
+        title: WalletGetBalanceInternalServerErrorResponseBody
+        type: object
+        properties:
+            balance:
+                type: string
+                example: "9.25"
+            userId:
+                type: integer
+                example: 16536520590577101901
+                format: int64
+        example:
+            balance: "9.25"
+            userId: 704199962019521334
+        required:
+            - userId
+            - balance
+    WalletGetBalanceNotFoundResponseBody:
+        title: WalletGetBalanceNotFoundResponseBody
+        type: object
+        properties:
+            balance:
+                type: string
+                example: "9.25"
+            userId:
+                type: integer
+                example: 14402703346446213772
+                format: int64
+        example:
+            balance: "9.25"
+            userId: 7610761547123233614
+        required:
+            - userId
+            - balance
+    WalletGetBalanceOKResponseBody:
+        title: WalletGetBalanceOKResponseBody
+        type: object
+        properties:
+            balance:
+                type: string
+                example: "9.25"
+            userId:
+                type: integer
+                example: 8755722758797478712
+                format: int64
+        example:
+            balance: "9.25"
+            userId: 15379942817560438185
+        required:
+            - userId
+            - balance
+    WalletHealthcheckResponseBody:
+        title: WalletHealthcheckResponseBody
         type: object
         properties:
             status:
                 type: string
-                description: Service status
-                example: Quod eum et voluptates.
+                example: Esse est optio.
         example:
-            status: Esse est optio.
+            status: Qui ipsa architecto.
         required:
             - status
