# gen/http/transaction/server/paths.go
@@ -1,18 +1,0 @@
-// Code generated by goa v3.17.2, DO NOT EDIT.
-//
-// HTTP request path constructors for the transaction service.
-//
-// Command:
-// $ goa gen wallet/design
-
-package server
-
-// HealthcheckTransactionPath returns the URL path to the transaction service healthcheck HTTP endpoint.
-func HealthcheckTransactionPath() string {
-	return "/transaction/health"
-}
-
-// CreateTransactionPath returns the URL path to the transaction service create HTTP endpoint.
-func CreateTransactionPath() string {
-	return "/transaction"
-}
