# gen/http/transaction/server/server.go
@@ -1,177 +1,0 @@
-// Code generated by goa v3.17.2, DO NOT EDIT.
-//
-// transaction HTTP server
-//
-// Command:
-// $ goa gen wallet/design
-
-package server
-
-import (
-	"context"
-	"net/http"
-	transaction "wallet/gen/transaction"
-
-	goahttp "goa.design/goa/v3/http"
-	goa "goa.design/goa/v3/pkg"
-)
-
-// Server lists the transaction service endpoint HTTP handlers.
-type Server struct {
-	Mounts      []*MountPoint
-	Healthcheck http.Handler
-	Create      http.Handler
-}
-
-// MountPoint holds information about the mounted endpoints.
-type MountPoint struct {
-	// Method is the name of the service method served by the mounted HTTP handler.
-	Method string
-	// Verb is the HTTP method used to match requests to the mounted handler.
-	Verb string
-	// Pattern is the HTTP request path pattern used to match requests to the
-	// mounted handler.
-	Pattern string
-}
-
-// New instantiates HTTP handlers for all the transaction service endpoints
-// using the provided encoder and decoder. The handlers are mounted on the
-// given mux using the HTTP verb and path defined in the design. errhandler is
-// called whenever a response fails to be encoded. formatter is used to format
-// errors returned by the service methods prior to encoding. Both errhandler
-// and formatter are optional and can be nil.
-func New(
-	e *transaction.Endpoints,
-	mux goahttp.Muxer,
-	decoder func(*http.Request) goahttp.Decoder,
-	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
-	errhandler func(context.Context, http.ResponseWriter, error),
-	formatter func(ctx context.Context, err error) goahttp.Statuser,
-) *Server {
-	return &Server{
-		Mounts: []*MountPoint{
-			{"Healthcheck", "GET", "/transaction/health"},
-			{"Create", "POST", "/transaction"},
-		},
-		Healthcheck: NewHealthcheckHandler(e.Healthcheck, mux, decoder, encoder, errhandler, formatter),
-		Create:      NewCreateHandler(e.Create, mux, decoder, encoder, errhandler, formatter),
-	}
-}
-
-// Service returns the name of the service served.
-func (s *Server) Service() string { return "transaction" }
-
-// Use wraps the server handlers with the given middleware.
-func (s *Server) Use(m func(http.Handler) http.Handler) {
-	s.Healthcheck = m(s.Healthcheck)
-	s.Create = m(s.Create)
-}
-
-// MethodNames returns the methods served.
-func (s *Server) MethodNames() []string { return transaction.MethodNames[:] }
-
-// Mount configures the mux to serve the transaction endpoints.
-func Mount(mux goahttp.Muxer, h *Server) {
-	MountHealthcheckHandler(mux, h.Healthcheck)
-	MountCreateHandler(mux, h.Create)
-}
-
-// Mount configures the mux to serve the transaction endpoints.
-func (s *Server) Mount(mux goahttp.Muxer) {
-	Mount(mux, s)
-}
-
-// MountHealthcheckHandler configures the mux to serve the "transaction"
-// service "healthcheck" endpoint.
-func MountHealthcheckHandler(mux goahttp.Muxer, h http.Handler) {
-	f, ok := h.(http.HandlerFunc)
-	if !ok {
-		f = func(w http.ResponseWriter, r *http.Request) {
-			h.ServeHTTP(w, r)
-		}
-	}
-	mux.Handle("GET", "/transaction/health", f)
-}
-
-// NewHealthcheckHandler creates a HTTP handler which loads the HTTP request
-// and calls the "transaction" service "healthcheck" endpoint.
-func NewHealthcheckHandler(
-	endpoint goa.Endpoint,
-	mux goahttp.Muxer,
-	decoder func(*http.Request) goahttp.Decoder,
-	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
-	errhandler func(context.Context, http.ResponseWriter, error),
-	formatter func(ctx context.Context, err error) goahttp.Statuser,
-) http.Handler {
-	var (
-		encodeResponse = EncodeHealthcheckResponse(encoder)
-		encodeError    = goahttp.ErrorEncoder(encoder, formatter)
-	)
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
-		ctx = context.WithValue(ctx, goa.MethodKey, "healthcheck")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "transaction")
-		var err error
-		res, err := endpoint(ctx, nil)
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil {
-				errhandler(ctx, w, err)
-			}
-			return
-		}
-		if err := encodeResponse(ctx, w, res); err != nil {
-			errhandler(ctx, w, err)
-		}
-	})
-}
-
-// MountCreateHandler configures the mux to serve the "transaction" service
-// "create" endpoint.
-func MountCreateHandler(mux goahttp.Muxer, h http.Handler) {
-	f, ok := h.(http.HandlerFunc)
-	if !ok {
-		f = func(w http.ResponseWriter, r *http.Request) {
-			h.ServeHTTP(w, r)
-		}
-	}
-	mux.Handle("POST", "/transaction", f)
-}
-
-// NewCreateHandler creates a HTTP handler which loads the HTTP request and
-// calls the "transaction" service "create" endpoint.
-func NewCreateHandler(
-	endpoint goa.Endpoint,
-	mux goahttp.Muxer,
-	decoder func(*http.Request) goahttp.Decoder,
-	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
-	errhandler func(context.Context, http.ResponseWriter, error),
-	formatter func(ctx context.Context, err error) goahttp.Statuser,
-) http.Handler {
-	var (
-		decodeRequest  = DecodeCreateRequest(mux, decoder)
-		encodeResponse = EncodeCreateResponse(encoder)
-		encodeError    = goahttp.ErrorEncoder(encoder, formatter)
-	)
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
-		ctx = context.WithValue(ctx, goa.MethodKey, "create")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "transaction")
-		payload, err := decodeRequest(r)
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil {
-				errhandler(ctx, w, err)
-			}
-			return
-		}
-		res, err := endpoint(ctx, payload)
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil {
-				errhandler(ctx, w, err)
-			}
-			return
-		}
-		if err := encodeResponse(ctx, w, res); err != nil {
-			errhandler(ctx, w, err)
-		}
-	})
-}
