# gen/transaction/endpoints.go
@@ -1,51 +1,0 @@
-// Code generated by goa v3.17.2, DO NOT EDIT.
-//
-// transaction endpoints
-//
-// Command:
-// $ goa gen wallet/design
-
-package transaction
-
-import (
-	"context"
-
-	goa "goa.design/goa/v3/pkg"
-)
-
-// Endpoints wraps the "transaction" service endpoints.
-type Endpoints struct {
-	Healthcheck goa.Endpoint
-	Create      goa.Endpoint
-}
-
-// NewEndpoints wraps the methods of the "transaction" service with endpoints.
-func NewEndpoints(s Service) *Endpoints {
-	return &Endpoints{
-		Healthcheck: NewHealthcheckEndpoint(s),
-		Create:      NewCreateEndpoint(s),
-	}
-}
-
-// Use applies the given middleware to all the "transaction" service endpoints.
-func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
-	e.Healthcheck = m(e.Healthcheck)
-	e.Create = m(e.Create)
-}
-
-// NewHealthcheckEndpoint returns an endpoint function that calls the method
-// "healthcheck" of service "transaction".
-func NewHealthcheckEndpoint(s Service) goa.Endpoint {
-	return func(ctx context.Context, req any) (any, error) {
-		return s.Healthcheck(ctx)
-	}
-}
-
-// NewCreateEndpoint returns an endpoint function that calls the method
-// "create" of service "transaction".
-func NewCreateEndpoint(s Service) goa.Endpoint {
-	return func(ctx context.Context, req any) (any, error) {
-		p := req.(*CreatePayload)
-		return nil, s.Create(ctx, p)
-	}
-}
