# gen/wallet/endpoints.go
@@ -1,0 +1,63 @@
+// Code generated by goa v3.17.2, DO NOT EDIT.
+//
+// wallet endpoints
+//
+// Command:
+// $ goa gen wallet/design
+
+package wallet
+
+import (
+	"context"
+
+	goa "goa.design/goa/v3/pkg"
+)
+
+// Endpoints wraps the "wallet" service endpoints.
+type Endpoints struct {
+	Healthcheck       goa.Endpoint
+	CreateTransaction goa.Endpoint
+	GetBalance        goa.Endpoint
+}
+
+// NewEndpoints wraps the methods of the "wallet" service with endpoints.
+func NewEndpoints(s Service) *Endpoints {
+	return &Endpoints{
+		Healthcheck:       NewHealthcheckEndpoint(s),
+		CreateTransaction: NewCreateTransactionEndpoint(s),
+		GetBalance:        NewGetBalanceEndpoint(s),
+	}
+}
+
+// Use applies the given middleware to all the "wallet" service endpoints.
+func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
+	e.Healthcheck = m(e.Healthcheck)
+	e.CreateTransaction = m(e.CreateTransaction)
+	e.GetBalance = m(e.GetBalance)
+}
+
+// NewHealthcheckEndpoint returns an endpoint function that calls the method
+// "healthcheck" of service "wallet".
+func NewHealthcheckEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req any) (any, error) {
+		return s.Healthcheck(ctx)
+	}
+}
+
+// NewCreateTransactionEndpoint returns an endpoint function that calls the
+// method "createTransaction" of service "wallet".
+func NewCreateTransactionEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req any) (any, error) {
+		p := req.(*CreateTransactionPayload)
+		return nil, s.CreateTransaction(ctx, p)
+	}
+}
+
+// NewGetBalanceEndpoint returns an endpoint function that calls the method
+// "getBalance" of service "wallet".
+func NewGetBalanceEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req any) (any, error) {
+		p := req.(*GetBalancePayload)
+		return s.GetBalance(ctx, p)
+	}
+}
